--- a/static/mod-manifest.json
+++ b/static/mod-manifest.json
@@ -1,14 +1,19 @@
 {
-    "apiVersion": "1.2",
+    "apiVersion": "1.3",
     "version": "1.0",
-    "name": "Mod Plotly Splom",
-    "id": "js-plotly-splom", 
+    "name": "Mod Splom",
+    "id": "tibco-mods-splom", 
     "icon": "icon.svg",
     "properties": [  
         {
             "name": "plotlySettings",
             "type": "string",
             "defaultValue": "-"
+        },
+        {
+            "name": "lastSelectedTabIndex",
+            "type": "integer",
+            "defaultValue": 0
         }
     ],    
     "dataViewDefinition": {
