--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mod-splom-plotly",
+    "name": "tibco-mods-splom",
     "version": "1.0.1",
     "description": "",
     "scripts": {
