Default axis label orientation: Horizontal

--- a/static/mod-manifest.json
+++ b/static/mod-manifest.json
@@ -22,6 +22,7 @@
         }
     ],    
     "dataViewDefinition": {
+        "tooltip": {"enabled": true},
         "colorAxis": {
             "mode": "categorical",
             "dropTarget": {
